2017-06-12	Removed unwanted type promotions and wrap-arounds.

		include/innocent-pear/bbq.h :
		- removed unwanted type promotions in `<<'s
		- do_inv_opt_rept(...) now clips value of N for case 4

		include/innocent-pear/kthxbai.h ,
		include/innocent-pear/orly.h ,
		include/innocent-pear/yarly.h ,
		include/innocent-pear/host/rly.h :
		- removed unwanted type promotions in `<<'s and `>>'s

		share/innocent-pear/doge-01.cc :
		- for ia16-elf, now directly scrambles 0xff as an 8-bit value

		test/test-kthxbai-b.cc ,
		test/test-kthxbai-b.good :
		- new; tests for unwanted type promotions affecting results

		GNUmakefile :
		- added test-kthxbai-b test case

2017-06-11	"Toddlers are the stormtroopers of the Lord of Entropy."  (2)

		GNUmakefile :
		- now no longer uses `readelf', for ia16-elf target

		include/innocent-pear/bbq.h :
		- added ops::allow_loop_plenty and ops::under_disabled_irqs

		include/innocent-pear/kthxbai.h :
		- now uses ops::allow_loop_plenty and ops::under_disabled_irqs
		  on ia16-elf

		include/innocent-pear/omg.h :
		- now uses ops::allow_loop_plenty on ia16-elf
		- may now emit `lahf', `sahf', and `salc' instructions on
		  x86-32/-16

		share/innocent-pear/doge-01.cc ,
		share/innocent-pear/doge-42.cc ,
		share/innocent-pear/doge-i.h :
		- now messes with IRQs on ia16-elf

2017-06-09	"Now assay said Syre Ector vnto Syre Kay"

		README.md :
		- added note on ia16-elf support

2017-06-08	test-doge-with-c now _really_ works on ia16-elf.

		share/innocent-pear/doge-i-ctors.ld :
		- now puts constants from teh<...> into separate .rodata.doge
		  and .data.doge sections, so that they will not be (wrongly)
		  scrambled by `-Xinnocent-pear -doge'; this fixes some
		  test-doge-with-c crashes

		share/innocent-pear/doge-04.cc :
		- removed laxity

		share/innocent-pear/doge-99.cc :
		- slightly tweaked

		include/innocent-pear/kthxbai.h :
		- kthxbai<...> now invokes omg<...> for default case, for
		  fun and profit
